--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     console:
       enabled: true
   jpa:
-    defer-datasource-initialization: true
+    defer-datasource-initialization: true # 어플리케이션 구동 시 데이터 자동 저장하기. resources/data.sql
     database-platform: H2
     hibernate:
       ddl-auto: create-drop
